--- a/day02/Practice05_practiceCNN.ipynb
+++ b/day02/Practice05_practiceCNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Practice05_practiceCNN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMnHGd894Q9ZOARm9CNW0M5"
+      "authorship_tag": "ABX9TyMKbI/7mZVerWFM5AvxKixS"
     },
     "kernelspec": {
       "name": "python3",
@@ -132,7 +132,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### A function to show a image"
+        "### A function to show an image"
       ],
       "metadata": {
         "id": "PjkOEeYY8_Cf"
